# bookly

./: .gitignore  data_import_script.py  docker-compose.yml  generate_recommendations_script.py
alembic/: env.py
alembic/versions/: 30f600e4a498_create_readers_table.py  c337d5924410_create_books_table.py  c6ff4b76e2fa_create_authors_table.py  efbdf6bcacdf_create_circulations_table.py  fa399e706820_create_recommendations_table.py
app/: config.py
app/api/: __init__.py
app/api/endpoints/: home.py
app/core/: recommendation.py
app/data/repositories/: books_repository.py  recommendations_repository.py
bookly_api/: .gitignore  Dockerfile  data_import_script.py  pyproject.toml  test.ipynb
bookly_api/.ipynb_checkpoints/: test-checkpoint.ipynb
bookly_api/alembic/versions/: 30f600e4a498_create_readers_table.py  c337d5924410_create_books_table.py
bookly_api/app/: config.py  main.py
bookly_api/app/api/: __init__.py  deps.py
bookly_api/app/api/endpoints/: recommendation.py
bookly_api/app/core/: recommendation.py
bookly_api/app/core/exceptions/: __init__.py
bookly_api/app/data/: database.py  tables.py
bookly_api/app/data/repositories/: __init__.py  books_repository.py  circulations_repository.py  readers_repository.py
bookly_web/: package-lock.json  package.json
